# Design-Multi-Agent-AI-Systems-using-MCP-and-A2A

./: README.md
ch03/k8s-ai/: README.md
ch04/ai-six/: README.md
ch05/ai-six/py/downloads/: url_index.json
ch09/: .gitignore  plan.md
ch09/makdo/: .env.example  README.md  coordinator_test.yaml  debug_analyzer.py  pyproject.toml  run_e2e_test.sh  test_makdo_full_workflow.py  test_makdo_real.py  test_makdo_with_slack.py  test_minimal.py  test_screenshot_validation.py  test_simple_screenshot.py  test_slack_agent.py  test_slack_simple.py
ch09/makdo/config/: makdo.example.yaml  makdo.yaml
ch09/makdo/scripts/: setup.sh
ch09/makdo/src/makdo/: __init__.py  main.py
ch09/makdo/src/makdo/agents/: analyzer.yaml  coordinator.yaml  coordinator_simple.yaml  fixer.yaml
ch09/makdo/src/makdo/mcp_tools/: __init__.py
ch09/makdo/src/makdo/tools/: __init__.py
ch09/makdo/tests/e2e/: demo_results.json  infrastructure_results.json  quick_results.json  quick_test.py  real_world_results.json  results.json  test_demo_with_screenshots.py  test_infrastructure.py  test_makdo_e2e.py  test_real_slack.py
ch09/makdo/tests/fixtures/: test_manifests.yaml
ch11/: .env.example  Dockerfile  check-prerequisites.sh  control-cluster.yaml  test-connectivity.sh  test-workload.yaml  worker-cluster.yaml
ch11/config/: makdo.yaml
ch11/k8s-ai/: Dockerfile  deployment.yaml
ch11/makdo/: README.md  deployment.yaml
ch11/src/makdo/: main.py
ch11/src/makdo/agents/: coordinator.yaml  slack.yaml
ch11/src/makdo/mcp_tools/: slack.py
ch11/src/makdo/tools/: slack_list_channels.py
(+6 files in other folders)
